# simple-microservice-with-rust

./: .gitignore  package.json  readme.md  turbo.json
apps/comments-service/: Cargo.toml  package.json
apps/comments-service/src/: lib.rs  main.rs
apps/event-bus/: Cargo.toml  Dockerfile  package.json
apps/event-bus/src/: main.rs
apps/moderation-service/: Cargo.toml  package.json
apps/posts-service/: Cargo.toml  package.json
apps/posts-service/src/: lib.rs  main.rs
apps/query-service/: Cargo.toml  package.json
apps/query-service/src/: lib.rs
apps/web/: package.json
apps/web/components/: CommentList.tsx  Post.tsx
apps/web/pages/: index.tsx
comments/: Cargo.toml
comments-service/: Cargo.toml
comments-service/src/: lib.rs  main.rs
comments-service/src/index/: mod.rs  post.rs
comments-service/src/routes/: events.rs  mod.rs
comments/src/: lib.rs  main.rs
comments/src/comments/: get.rs  mod.rs
comments/src/index/: get.rs
common/src/: lib.rs
event-bus/: Cargo.toml
event-bus/src/: main.rs
moderation-service/: Cargo.toml
moderation-service/src/: main.rs
posts/: Cargo.toml
posts-service/: Cargo.toml
posts-service/src/: lib.rs  main.rs
posts-service/src/routes/: events.rs
posts/src/: lib.rs  main.rs
posts/src/index/: get.rs  mod.rs  post.rs
query-service/: Cargo.toml
query-service/src/: lib.rs  main.rs
query-service/src/routes/: events.rs  mod.rs  posts.rs
web/: package.json  pnpm-lock.yaml
web/components/: CommentList.tsx  CreatePost.tsx  Post.tsx  PostList.tsx
web/pages/: index.tsx
web/utils/: constants.ts
(+8 files in other folders)
