[package]
name = "comments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
