[package]
name = "moderation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "*"
reqwest = { version = "0.11", features = ["json"] }
common = { path = "../common" }
